[gd_scene load_steps=4 format=3 uid="uid://ts7e4oe1d1vi"]

[ext_resource type="Texture2D" uid="uid://c1e5h33lwu7ob" path="res://art/pool_cue.png" id="1_n7q0t"]
[ext_resource type="Script" uid="uid://x61en6md8dkc" path="res://pool_cue.gd" id="1_oncs0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oncs0"]
size = Vector2(64, 32)

[node name="pool_cue" type="Area2D"]
visible = false
collision_layer = 2
collision_mask = 0
script = ExtResource("1_oncs0")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_n7q0t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(67, 0)
scale = Vector2(0.4, 0.4)
shape = SubResource("RectangleShape2D_oncs0")
disabled = true

[node name="CueExtendTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CueRetractTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="CueExtendTimer" to="." method="_on_cue_extend_timer_timeout"]
[connection signal="timeout" from="CueRetractTimer" to="." method="_on_cue_retract_timer_timeout"]
